syntax = "proto3";
option go_package = "github.com/odysseia-greek/delphi/ptolemaios/proto";

package delphi_ptolemaios;


service Ptolemaios {
  // Get the config from ptolemaios
  rpc GetSecret (VaultRequest) returns (ElasticConfigVault) {}
  rpc GetNamedSecret (VaultRequestNamed) returns (ElasticConfigVault) {}
  rpc Health (HealthRequest) returns (HealthResponse) {}
  rpc ShutDown (ShutDownRequest) returns (ShutDownResponse) {}
}

message VaultRequest {
}

message VaultRequestNamed {
  string pod_name = 1;
}

message HealthRequest {
}

message ShutDownRequest {
  string code = 1;
}

// The response message with the config taken from vault
message ElasticConfigVault {
  string elasticUsername = 1;
  string elasticPassword = 2;
  string ElasticCERT = 3;
}

message HealthResponse {
  bool health = 1;
}

message ShutDownResponse {
}
